Fixed carousel indicators not showing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5957,7 +5957,7 @@ a.close.disabled {
 .carousel-indicators {
   position: absolute;
   right: 0;
-  bottom: 0;
+  bottom: -50;
   left: 0;
   z-index: 15;
   display: flex;
@@ -5970,16 +5970,17 @@ a.close.disabled {
 .carousel-indicators li {
   box-sizing: content-box;
   flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
+  width: 15px;
+  height: 15px;
   margin-right: 3px;
   margin-left: 3px;
   text-indent: -999px;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #1DB487;
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
+  border-radius: 50%;
   opacity: 0.5;
   transition: opacity 0.6s ease;
 }
